# erasure_code

./: .gitignore  Makefile.am  build.sh  configure.ac  erasure_code.cpp  erasure_code.h
gf-complete/src/: gf_w8.c
jerasure/: Makefile.am
jerasure/Examples/: jerasure_05.c
jerasure/gf-complete/include/: gf_complete.h
jerasure/gf-complete/src/: gf.c
jerasure/include/: cauchy.h  galois.h  jerasure.h  liberation.h  reed_sol.h
jerasure/jerasure/include/: cauchy.h  jerasure.h  liberation.h
jerasure/jerasure/src/: galois.c
jerasure/src/: jerasure.c
